# ByaheMoto

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: AndroidBuild.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_in_from_left.xml  slide_in_from_right.xml
app/src/main/res/drawable/: baseline_account_balance_wallet_24.xml  baseline_add_card_24.xml  baseline_chevron_right_24.xml  baseline_directions_car_filled_24.xml  baseline_drive_file_rename_outline_24.xml  baseline_edit_24.xml  baseline_history_24.xml  baseline_home_24.xml  baseline_list_alt_24.xml  baseline_location_on_24.xml  baseline_logout_24.xml  baseline_map.xml  baseline_map_24.xml  baseline_money_24.xml  baseline_my_location_24.xml  baseline_my_location_driver.xml  baseline_personal_injury_24.xml  baseline_star_24.xml  bg_view.xml  book_btn.xml  custom_button.xml  editbg.xml  (+6 more)
backend/: README.md  main.py  pyproject.toml  seed.py
backend/byahe/: __init__.py  __main__.py  settings.py
backend/byahe/repositories/: __init__.py  base.py  booking.py  user.py  verification.py
backend/byahe/routers/: authentication.py  bookings.py  profile.py  system.py  users.py  verification_requests.py
backend/byahe/schemas/: base.py  models.py  request.py  response.py
backend/byahe/utils/: __init__.py  decorators.py  events.py  factory.py  fare.py  file.py  hashing.py  jwt.py  mail.py  queue.py  response.py  routing.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20240831060934_init/: migration.sql
gradle/wrapper/: gradle-wrapper.properties
(+93 files in other folders)
