[tool.poetry]
name = "byahe-mo-to"
version = "0.1.0"
description = ""
authors = ["dev-laww <lawrenceallen.tech@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.3"
prisma = "^0.13.1"
asyncio = "^3.4.3"
fastapi-mail = "^1.4.1"
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
httpx = "^0.27.0"
geopy = "^2.4.1"
celery = {extras = ["redis"], version = "^5.4.0"}
pyhumps = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
